# bqcli

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/: bqcli.py  helpers.py
tests/: repl.py  test_repl.py
